<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.edu.hqu.cst.android.lzt.ex2.UC2">

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="0dp"
        android:paddingTop="64dp"
        >

        <Button
            android:id="@+id/RelativeButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ph_button_1" />

        <Button
            android:id="@+id/RelativeButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/RelativeButton1"
            android:text="@string/ph_button_2"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="0dp"
        android:paddingTop="256dp"
        >

    <Button
        android:id="@+id/RelativeButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ph_button_3"
        />

    <Button
        android:id="@+id/RelativeButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/RelativeButton3"
        android:text="@string/ph_button_4"
        />

    </RelativeLayout>

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>