<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.edu.hqu.cst.android.lzt.ex2.UC1"
    >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/homeButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <Button
            android:id="@+id/ButtonH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uc1_horizontal_layout"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/ButtonV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uc1_vertical_layout"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/ButtonAL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uc1_align_left"
            android:layout_weight="1"
            />


    </LinearLayout>

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>